--- a/src/index.html
+++ b/src/index.html
@@ -226,11 +226,11 @@
             </p>
           </div>
           <div class="simplify-button m-12">
-            <button style="font-size: 3vw" type="button"
+            <button type="button"
               class="text-white bg-gray-800 hover:bg-red-500 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full px-5 py-4 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 text-xl">
               Get started for free
             </button>
-            <button style="font-size: 3vw" type="button"
+            <button type="button"
               class="py-4 px-5 me-2 mb-2 font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-red-500 hover:text-white focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 text-xl">
               Learn more
             </button>
