--- a/src/signup.html
+++ b/src/signup.html
@@ -50,7 +50,7 @@
         <div class="master-container">
           <div class="flex items-center justify-between gap-x-8 pb-20">
             <!-- Header Logo -->
-            <a class href="/src/index.html">
+            <a class href="https://bc75-group-6-capstone-tailwind-homepage-2.vercel.app/">
               <img
                 src="./IMG/logo-dark.png"
                 alt="Logo"
