--- a/src/index.html
+++ b/src/index.html
@@ -951,7 +951,7 @@
     integrity="sha512-ZKNVEa7gi0Dz4Rq9jXcySgcPiK+5f01CqW+ZoKLLKr9VMXuCsw3RjWiv8ZpIOa0hxO79np7Ec8DDWALM0bDOaQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
-
+<!-- Slick carousel -->
   <script>
     $(".companies-slick").slick({
       slidesToShow: 5,
