update bg signup

--- a/src/signup.html
+++ b/src/signup.html
@@ -42,7 +42,7 @@
   <body>
     <!--     Phúc start -->
     <!--...::: Header Start :::... -->
-    <div class="page-wrapper pb-10">
+    <div class="page-wrapper pb-10" style="background: unset !important;">
       <header
         class="site-header site-header--absolute is--white py-3"
         id="sticky-menu"
