update them responsive

--- a/src/index.html
+++ b/src/index.html
@@ -666,7 +666,7 @@
         data-aos="fade-up"
         data-aos-duration="1000"
       >
-        <h1>
+        <h1 class="md:text-7xl text-5xl py-8 font-bold whitespace-nowrap">
           Cost-effectively <br />
           build any software
         </h1>
