--- a/src/index.html
+++ b/src/index.html
@@ -843,14 +843,9 @@
 
     <!-- Toan start -->
     <!-- free ask us -->
-    <section class="Freely-ask-us max-w-7-xl">
+    <section class="Freely-ask-us master-container max-w-7-xl">
       <div
-        style="
-          img {
-            max-width: 100%;
-            height: auto;
-          }
-        "
+        
         class="max-w-screen-xl mx-auto p-4 mt-16"
       >
         <div class="grid grid-cols-2 p-4">
