--- a/src/index.html
+++ b/src/index.html
@@ -840,10 +840,20 @@
     <!-- Toan start -->
     <!-- free ask us -->
     <section class="Freely-ask-us max-w-7-xl">
-      <div class="max-w-screen-xl mx-auto p-4 mt-16">
+      <div
+        style="
+          img {
+            max-width: 100%;
+            height: auto;
+          }
+        "
+        class="max-w-screen-xl mx-auto p-4 mt-16"
+      >
         <div class="grid grid-cols-2 p-4">
           <div data-aos="fade-right" class="mr-24">
-            <h2 class="text-7xl font-bold text-gray-900 dark:text-white pb-5">
+            <h2
+              class="tieu-de-ask-us text-7xl font-bold text-gray-900 dark:text-white pb-5"
+            >
               Freely ask us for more information
             </h2>
             <p class="text-lg text-gray-900 dark:text-white pb-10">
@@ -988,22 +998,15 @@
       </div>
     </section>
     <!-- Positive feedback -->
-    <section class="bg-black">
+    <section class="bg-black class-external-toan">
       <div class="max-w-screen-xl mx-auto p-4 mt-16">
         <div class="p-4">
           <div data-aos="fade-up" class="pt-10 pb-10">
-            <h2 class="text-6xl text-center font-bold text-white">
+            <h2 class="tieu-de-chinh text-center font-bold text-white">
               Positive feedback <br />from our users
             </h2>
           </div>
-          <div
-            style="
-              display: grid;
-              gap: 30px;
-              grid-template-columns: repeat(3, 1fr);
-              padding-bottom: 80px;
-            "
-          >
+          <div class="bo-cuc-3 dien-thoai-slide-1">
             <div
               class="max-w-7xl p-5 m-auto rounded-md border-red-700 border-2 border-solid"
             >
@@ -1032,7 +1035,6 @@
                 </div>
               </div>
             </div>
-
             <div
               class="max-w-7xl p-5 m-auto rounded-md border-red-700 border-2 border-solid"
             >
@@ -1188,7 +1190,7 @@
       </div>
       <!-- footer center -->
       <div
-        class="max-w-7xl grid grid-cols-[1fr_auto_auto_1fr] gap-20 m-auto pt-20 pb-20 border-t-2 border-b-2 border-solid border-neutral-300"
+        class="max-w-7xl bo-cuc-4 gap-20 m-auto pt-20 pb-20 border-t-2 border-b-2 border-solid border-neutral-300"
       >
         <div class="flex flex-col gap-y-6">
           <a href="#">
