--- a/src/index.html
+++ b/src/index.html
@@ -286,7 +286,7 @@
         <div class="master-container">
           <div data-aos="fade-up">
             <div class="simplify-text m-2">
-              <h1>
+              <h1 style="font-size:8vw">
                 Simplify your SaaS <br />
                 solution with AI
               </h1>
