--- a/src/index.html
+++ b/src/index.html
@@ -377,7 +377,7 @@
     <section class="core-features">
       <div class="master-container">
         <div data-aos="fade-up" class="core-features-info">
-          <h2>Core features that make it valuable</h2>
+          <h2 style="font-size:6vw">Core features that make it valuable</h2>
         </div>
         <!-- Table -->
         <div data-aos="fade-up" class="features-table">
